# open_source

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yaml
alp_benchmarks/: CMakeLists.txt
alp_benchmarks/speed/bench/: CMakeLists.txt  bench_alp_cutter_decode.cpp  bench_alp_cutter_encode.cpp  bench_alp_encode.cpp  bench_alp_without_sampling.cpp  bench_chimp.cpp  bench_chimp128.cpp  bench_gorillas.cpp  bench_patas.cpp  bench_zstd.cpp
alp_benchmarks/speed/test/: CMakeLists.txt  test_alp.cpp  test_chimp.cpp  test_chimp128.cpp  test_gorillas.cpp  test_patas.cpp  test_zstd.cpp
alp_generated/: CMakeLists.txt
alp_generated/arm64v8/: CMakeLists.txt
alp_generated/arm64v8/neon_intrinsic_uf1/: arm64v8_neon_intrinsic_1024_uf1_falp_src.cpp  arm64v8_neon_intrinsic_1024_uf1_falp_test.cpp  falp.cmake
alp_generated/fallback/scalar_aav_uf1/: fallback_scalar_aav_1024_uf1_falp_bench.cpp  fallback_scalar_aav_1024_uf1_falp_src.cpp  fallback_scalar_aav_1024_uf1_falp_test.cpp  falp.cmake
alp_generated/wasm/simd128_intrinsic_uf1/: falp.cmake  wasm_simd128_intrinsic_1024_uf1_falp_bench.cpp  wasm_simd128_intrinsic_1024_uf1_falp_src.cpp  wasm_simd128_intrinsic_1024_uf1_falp_test.cpp
alp_generated/x86_64/avx2_intrinsic_uf1/: falp.cmake  x86_64_avx2_intrinsic_1024_uf1_falp_bench.cpp  x86_64_avx2_intrinsic_1024_uf1_falp_src.cpp  x86_64_avx2_intrinsic_1024_uf1_falp_test.cpp
alp_generated/x86_64/avx512bw_intrinsic_uf1/: falp.cmake  x86_64_avx512bw_intrinsic_1024_uf1_falp_bench.cpp  x86_64_avx512bw_intrinsic_1024_uf1_falp_src.cpp  x86_64_avx512bw_intrinsic_1024_uf1_falp_test.cpp
alp_generated/x86_64/sse_intrinsic_uf1/: falp.cmake  x86_64_sse_intrinsic_1024_uf1_falp_bench.cpp  x86_64_sse_intrinsic_1024_uf1_falp_src.cpp  x86_64_sse_intrinsic_1024_uf1_falp_test.cpp
alp_pub/: alp_estimated_compression.csv  alp_rd_estimated_compression.csv
data/1024_data_generated/: generated_doubles_bw0.csv
example/: CMakeLists.txt  adaptive_compress.cpp  rd_compress.cpp  simple_compress.cpp
include/: common.h  dataset.hpp  datasets.hpp  datasets32.hpp  mapper.hpp  metadata.hpp
include/alp/: alp.hpp  config.hpp  constants.hpp  cutter.hpp  decode.hpp  encode.hpp  ffor.hpp  sampler.hpp  state.hpp  unffor.hpp
include/alp/api/: compressor.hpp  decompressor.hpp  storer.hpp  utils.hpp
include/gorillas/: gorillas.hpp
include/patas/: patas.hpp
include/zstd/: Makefile
